--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="~/Client/css/animate.css" asp-append-version="true">
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">*@
     <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="~/Client/css/icomoon.css" asp-append-version="true">
+    @*<link rel="stylesheet" href="~/Client/css/icomoon.css" asp-append-version="true">*@
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="~/Client/css/bootstrap.css" asp-append-version="true">
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js">*@
@@ -50,6 +50,7 @@
     <!---Sweetalert Css-->
     <link href="~/Admin/plugins/sweet-alert/jquery.sweet-modal.min.css" rel="stylesheet" asp-append-version="true" />
     <link href="~/Admin/plugins/sweet-alert/sweetalert.css" rel="stylesheet" asp-append-version="true" />
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <!-- Theme style  -->
     <link rel="stylesheet" href="~/Client/css/style.css" asp-append-version="true">
 
