imagelere lazy load eklendi

--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -68,7 +68,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2 col-md-push-5 text-center">
-                            <div id="colorlib-logo"><a href="#home"><img src="~/images/logo.png" class="img-fluid img-responsive" alt="Sinem Kobaner" /></a></div>
+                            <div id="colorlib-logo">
+                                <a href="#home">
+                                    <img src="" class="img-fluid img-responsive lazy" data-src="/images/logo.png" data-srcset="/images/logo.png" alt="Sinem Kobaner" />
+                                </a>
+                            </div>
                         </div>
                         <div class="col-md-5 col-md-pull-2 text-right menu-1">
                             <ul>
@@ -90,7 +94,8 @@
             </div>
         </nav>
 
-        <section id="home" class="video-hero" style="height: 800px; background-image: url(images/7.webp);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+        <section id="home" class="video-hero"
+                 style="height: 800px; background-image: url(images/7.webp);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
             <div class="overlay"></div>
             @*<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Yz5-mrDBbxU',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a>*@
             <div class="display-t text-center">
@@ -179,34 +184,34 @@
                         <div class="row">
                             <div class="col-md-3 no-gutters">
                                 <a href="~/images/1.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/1.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/1.webp" data-srcset="/images/1.webp" alt="">
                                 </a>
                                 <a href="~/images/2.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/2.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/2.webp" data-srcset="/images/2.webp" alt="">
                                 </a>
                             </div>
                             <div class="col-md-3 no-gutters">
                                 <a href="~/images/3.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/3.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/3.webp" data-srcset="/images/3.webp" alt="">
                                 </a>
                                 <a href="~/images/4.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/4.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/4.webp" data-srcset="/images/4.webp" alt="">
                                 </a>
                             </div>
                             <div class="col-md-3 no-gutters">
                                 <a href="~/images/5.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/5.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/5.webp" data-srcset="/images/5.webp" alt="">
                                 </a>
                                 <a href="~/images/6.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/6.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/6.webp" data-srcset="/images/6.webp" alt="">
                                 </a>
                             </div>
                             <div class="col-md-3 no-gutters">
                                 <a href="~/images/7.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/7.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/7.webp" data-srcset="/images/7.webp" alt="">
                                 </a>
                                 <a href="~/images/8.webp" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="~/images/8.webp" alt="">
+                                    <img class="img-responsive lazy" src="" data-src="/images/8.webp" data-srcset="/images/8.webp" alt="">
                                 </a>
                             </div>
                         </div>
