--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -306,9 +306,9 @@
                         <p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
                         <p>
                             <ul class="colorlib-social-icons">
-                                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-instagram"></i></a></li>
+                                <li><a href="#"><i class="lab la-twitter"></i></a></li>
+                                <li><a href="#"><i class="lab la-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="lab la-instagram"></i></a></li>
                             </ul>
                         </p>
                     </div>
@@ -316,12 +316,12 @@
                         <h4>Bilgiler</h4>
                         <p>
                             <ul class="colorlib-footer-links">
-                                <li><a href="#home"><i class="icon-check"></i> Ana Sayfa</a></li>
-                                <li><a href="#services"><i class="icon-check"></i> Hizmetlerimiz</a></li>
-                                <li><a href="#gallery"><i class="icon-check"></i> Galeri</a></li>
-                                <li><a href="#about"><i class="icon-check"></i> Hakkımızda</a></li>
-                                <li><a href="#appcontact"><i class="icon-check"></i> İletişim</a></li>
-                                <li><a href="#appcontact"><i class="icon-check"></i> Randevu</a></li>
+                                <li><a href="#home"><i class="las la-check"></i> Ana Sayfa</a></li>
+                                <li><a href="#services"><i class="las la-check"></i> Hizmetlerimiz</a></li>
+                                <li><a href="#gallery"><i class="las la-check"></i> Galeri</a></li>
+                                <li><a href="#about"><i class="las la-check"></i> Hakkımızda</a></li>
+                                <li><a href="#appcontact"><i class="las la-check"></i> İletişim</a></li>
+                                <li><a href="#appcontact"><i class="las la-check"></i> Randevu</a></li>
                             </ul>
                         </p>
                     </div>
@@ -330,9 +330,9 @@
                         <h4>İletişime Geçin</h4>
                         <ul class="colorlib-footer-links">
                             <li>Güzelyalı, 25-1, Uğur Mumcu Blv., <br> 01170 Çukurova/Adana</li>
-                            <li><a href="tel://1234567920"><i class="icon-phone"></i> +90 555 555 55 55</a></li>
-                            <li><a href="mailto:fotograf@sinemkobaner.com"><i class="icon-envelope"></i> fotograf@sinemkobaner.com</a></li>
-                            <li><a href="#"><i class="icon-location4"></i> sinemkobaner.com</a></li>
+                            <li><a href="tel://1234567920"><i class="las la-phone"></i> +90 555 555 55 55</a></li>
+                            <li><a href="mailto:fotograf@sinemkobaner.com"><i class="las la-envelope"></i> fotograf@sinemkobaner.com</a></li>
+                            <li><a href="#"><i class="las la-map-marker"></i> sinemkobaner.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -358,7 +358,7 @@
     </div>
 
     <div class="gototop js-top">
-        <a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
+        <a href="#" class="js-gotop"><i class="las la-arrow-up"></i></a>
     </div>
     <!-- jQuery -->
     @*<script src="~/Client/js/jquery.min.js" asp-append-version="true"></script>*@
