--- a/PhotoStudioFS/Views/Shared/_LayoutAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_LayoutAdmin.cshtml
@@ -95,7 +95,7 @@
 </head>
 <body class="app sidebar-mini rtl">
     <!--Global-Loader-->
-    <div id="global-loader" class=".global-loader">
+    <div id="global-loader" class="global-loader">
         <img src="~/Admin/images/icons/loader.svg" alt="loader">
     </div>
 
