çekim türleri anasayfaya dinamik olarak geliyor.

--- a/PhotoStudioFS/Views/Setting/ShootTypes.cshtml
+++ b/PhotoStudioFS/Views/Setting/ShootTypes.cshtml
@@ -49,27 +49,27 @@
                         <label class="control-label">Ana Sayfada Görünecek icon</label>
                         <br />
                         <label class="radio-inline">
-                            <input type="radio" name="Icon" value="las la-camera icon">
+                            <input type="radio" name="Icon" value="las la-camera">
                             <i class="las la-camera icon"></i>
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="Icon" value="las la-video icon">
+                            <input type="radio" name="Icon" value="las la-video">
                             <i class="las la-video icon"></i>
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="Icon" value="las la-camera-retro icon">
+                            <input type="radio" name="Icon" value="las la-camera-retro">
                             <i class="las la-camera-retro icon"></i>
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="Icon" value="las la-photo-video icon">
+                            <input type="radio" name="Icon" value="las la-photo-video">
                             <i class="las la-photo-video icon"></i>
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="Icon" value="las la-film icon">
+                            <input type="radio" name="Icon" value="las la-film">
                             <i class="las la-film icon"></i>
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="Icon" value="las la-file-video icon">
+                            <input type="radio" name="Icon" value="las la-file-video">
                             <i class="las la-file-video icon"></i>
                         </label>
 
@@ -109,7 +109,7 @@
                                 <tr>
                                     <td><img class="img-fluid img-responsive" width="75" src="@shootType.PhotoPath" alt="Alternate Text" /></td>
                                     <td>@shootType.Name</td>
-                                    <td><i class="@shootType.Icon"></i></td>
+                                    <td><i class="@shootType.Icon icon"></i></td>
                                     @if (shootType.IsActive)
                                     {
                                         <td><span class="badge badge-success">Aktif</span></td>
