--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -116,39 +116,20 @@
                 <div id="colorlib-services">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-4 text-center animate-box">
-                                <div class="services">
-                                    <span class="icon">
-                                        <i class="icon-camera4"></i>
-                                    </span>
-                                    <div class="desc">
-                                        <h3>Fotoğraf Çekimi</h3>
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            @foreach (var shootType in ViewBag.ShootTypes)
+                            {
+                                <div class="col-md-4 text-center animate-box">
+                                    <div class="services">
+                                        <span class="icon">
+                                            <i class="@shootType.Icon"></i>
+                                        </span>
+                                        <div class="desc">
+                                            <h3>@shootType.Name</h3>
+                                            <p>@shootType.Description</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4 text-center animate-box">
-                                <div class="services">
-                                    <span class="icon">
-                                        <i class="icon-image2"></i>
-                                    </span>
-                                    <div class="desc">
-                                        <h3>Dış &amp; İç Çekim</h3>
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 text-center animate-box">
-                                <div class="services">
-                                    <span class="icon">
-                                        <i class="icon-video3"></i>
-                                    </span>
-                                    <div class="desc">
-                                        <h3>Video Çekimi</h3>
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                    </div>
-                                </div>
-                            </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -398,7 +379,7 @@
 
         <script src="~/Client/js/main.js" asp-append-version="true" defer></script>
         <script src="~/Client/Client.js" defer></script>*@
-    <script src="~/Client/js/bundle.min.js"></script>
+    <script src="~/Client/js/bundle.min.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
     @*<script src="~/Common/common.js" defer></script>*@
 </body>
