--- a/PhotoStudioFS/wwwroot/Client/css/bundle.css
+++ b/PhotoStudioFS/wwwroot/Client/css/bundle.css
@@ -13885,6 +13885,10 @@ h1, h2, h3, h4, h5, h6, figure {
         text-transform: uppercase;
     }
 
+    .services .desc p {
+        word-wrap: break-word;
+    }
+
 .colorlib-about-flex {
     display: -webkit-box;
     display: -moz-box;
